# tvrender

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  glad-gen
src/: main.c  main.h
src/cmd/: cmdline.c  cmdline.h  genc  opt.ggo
src/common/: id.c  id.h  maths_fucked.c  maths_fucked.h
src/debug/: print.c  print.h
src/gl/: .gitignore
src/io/: tvr1.h  tvr2.h  tvr_internal.h  tvrender.c  tvrender.h
src/render/: gfxenv.c  gfxenv.h  gfxenv_gl.c  gfxenv_gl_ib.c  gfxenv_gl_mat.c  gfxenv_gl_mesh.c  gfxenv_gl_pov.c  gfxenv_gl_tex.c  gfxenv_gl_vb.c  gfxenv_gles.c  gfxenv_gles.h  opengl.h  opengl2.c  rflag.c  rflag.h  texture.h
src/shaders/: frag.frag  vert.vert
